--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -26,7 +26,8 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          # python-version: '3.x'
+          python-version: '3.12.1'
 
       - name: Install dependencies
         run: |
@@ -34,6 +35,8 @@ jobs:
           pip install build
 
       - name: Build package
+        run: |
+          python -m build  # Builds the Python package
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
