--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,8 +2,11 @@
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[project]
 
+
+[project]
+name = "example-package"
+version = "0.1.0"
 authors = [
   { name="Example Author", email="author@example.com" },
 ]
@@ -15,3 +18,6 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ] 
+
+[tool.hatch.build.targets.wheel]
+package = ["src/example_package"]
