--- a/.github/workflows/realease_package.yml
+++ b/.github/workflows/realease_package.yml
@@ -23,6 +23,8 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
