--- a/.github/workflows/realease_package.yml
+++ b/.github/workflows/realease_package.yml
@@ -8,10 +8,7 @@ on:
     branches:
       - master
 
-env:
-  CLOUDSMITH_NAMESPACE: ${{ vars.CLOUDSMITH_NAMESPACE }}
-  CLOUDSMITH_REPOSITORY: "staging"
-  CLOUDSMITH_SERVICE_SLUG: ${{ vars.CLOUDSMITH_SERVICE_SLUG }}
+
 
 permissions:
   contents: read
@@ -45,10 +42,14 @@ jobs:
         shell: bash
 
       - name: Push package to Cloudsmith
+        env:
+          CLOUDSMITH_NAMESPACE: ${{ secrets.CLOUDSMITH_NAMESPACE }}
+          CLOUDSMITH_REPOSITORY: "staging"
+          CLOUDSMITH_SERVICE_SLUG: ${{ secrets.CLOUDSMITH_SERVICE_SLUG }}
         run: |
           if ! ls dist/*.tar.gz 1> /dev/null 2>&1; then
             echo "No package found to upload"
             exit 1
           fi
-          cloudsmith push python ${{ env.CLOUDSMITH_NAMESPACE }}/${{ env.CLOUDSMITH_REPOSITORY }} dist/*.tar.gz --republish
+          cloudsmith push python ${CLOUDSMITH_NAMESPACE }/${CLOUDSMITH_REPOSITORY} dist/*.tar.gz --republish
         shell: bash
